# enerooo-spark-device-library

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manifest.yaml  pyproject.toml
.github/workflows/: build-sparkctl.yml  release.yml
devices/: apator.yaml  axioma.yaml  bmeters.yaml  carlo-gavazzi.yaml  dme.yaml  eastron.yaml  ecm.yaml  emylo.yaml  enerooo.yaml  kaden.yaml  kamstrup.yaml  milesight.yaml  orno.yaml  sontex.yaml  technilog.yaml  zenner.yaml
docs/architecture/: controls-architecture.md  mapping-redesign.md  versioning-parity.md
scripts/: backup-db.sh  bump-version.sh  sync-library.py
src/auditlog/: admin.py  helpers.py  models.py  urls.py  views.py
src/auditlog/migrations/: 0001_initial.py  0002_gateway_category.py
src/auditlog/templates/auditlog/: log_list.html
src/config/: urls.py  wsgi.py
src/config/settings/: base.py  docker.py  local.py  production.py  test.py
src/core/: admin.py  context_processors.py  forms.py  middleware.py  models.py  permissions.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_invitation.py  0003_user_timezone.py
src/core/templates/core/: accept_invitation.html  invitation_form.html  invitation_invalid.html  invitation_list.html  profile.html  user_list.html  user_role_form.html
src/templates/: base.html
src/templates/registration/: login.html  password_change.html
tools/sparkctl/: Makefile  go.mod  main.go
tools/sparkctl/internal/github/: client.go
tools/sparkctl/internal/models/: device.go
tools/sparkctl/internal/source/: local.go  source.go
tools/sparkctl/internal/state/: state.go
tools/sparkctl/internal/tui/: app.go  styles.go
